--- a/homework_15/scss/style.scss
+++ b/homework_15/scss/style.scss
@@ -45,6 +45,7 @@ body {
         background-color: transparent;
         border: 2px solid lightgray;
         border-radius: 4px;
+        cursor: pointer;
 
         &--big {
             background-color: bisque;
